--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="menu">
                 <button class="home-button" data-link="../">Home</button>
                 <button data-link="../Titanics/Titanics.html">Titanics</button>
-                <button data-link="Huges.html">Huges</button>
+                 <button data-link="Huges.html">Huges</button> <!-- Path to Huges -->
                 <button data-link="../Exclusives/Exclusives.html">Exclusives</button>
                 <button data-link="../Stat/Stat.html">Stat pets</button>
                 <button data-link="../Hoverboards/Hoverboards.html">Hoverboards</button>
