--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
     <div class="container">
         <aside class="sidebar">
             <div class="menu">
-                <button class="home-button" data-link="../">Home</button>
-                <button data-link="../Titanics/Titanics.html">Titanics</button>
+                <a href="index.html">T</a>
+               <a href="Titanics.html">T</a>
                  <a href="Huges.html">Huges</a> <!-- Link to Huges page -->
-                <button data-link="../Exclusives/Exclusives.html">Exclusives</button>
-                <button data-link="../Stat/Stat.html">Stat pets</button>
-                <button data-link="../Hoverboards/Hoverboards.html">Hoverboards</button>
+                <a href="Exclusives.html">T</a>
+               <a href="Stat.html">T</a>
+                
             </div>
             <button class="joinme-button" data-link="https://www.roblox.com/users/377788908/profile">
                 <img src="Face.png" alt="Profile">Join Me
