--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
     <div class="container">
         <aside class="sidebar">
             <div class="menu">
-                <a href="index.html">T</a>
-               <a href="Titanics.html">T</a>
+                <a href="index.html">index</a>
+               <a href="Titanics.html">Titanics</a>
                  <a href="Huges.html">Huges</a> <!-- Link to Huges page -->
-                <a href="Exclusives.html">T</a>
-               <a href="Stat.html">T</a>
+                <a href="Exclusives.html">Exclusives</a>
+               <a href="Stat.html">Stat</a>
                 
             </div>
             <button class="joinme-button" data-link="https://www.roblox.com/users/377788908/profile">
