--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
         <aside class="sidebar">
             <div class="menu">
                 <a href="index.html">index</a>
-               <a href="Titanics.html">Titanics</a>
-                 <a href="Huges.html">Huges</a> <!-- Link to Huges page -->
-                <a href="Exclusives.html">Exclusives</a>
-               <a href="Stat.html">Stat</a>
+                <a href="Titanics.html">Titanics</a>
+                <a href="Huges.html">Huges</a>
+                <a href="Exclusives/Exclusives.html">Exclusives</a>
+                <a href="Stat/Stat.html">Stat</a>
                 
             </div>
             <button class="joinme-button" data-link="https://www.roblox.com/users/377788908/profile">
