--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         <aside class="sidebar">
             <div class="menu">
                 <a href="index.html">index</a>
-                <a href="Titanics.html">Titanics</a>
-                <a href="Huges.html">Huges</a>
+                <a href="Titanics/Titanics.html">Titanics</a>
+                <a href="Huge/Huges.html">Huges</a>
                 <a href="Exclusives/Exclusives.html">Exclusives</a>
                 <a href="Stat/Stat.html">Stat</a>
                 
