--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
     <div class="container">
         <aside class="sidebar">
             <div class="menu">
-                <a href="index.html">index</a>
-                <a href="Titanics/Titanics.html">Titanics</a>
-                <a href="Huge/Huges.html">Huges</a>
-                <a href="Exclusives/Exclusives.html">Exclusives</a>
-                <a href="Stat/Stat.html">Stat</a>
+                            <button class="home-button" data-link="../">Home</button>
+                            <button data-link="Titanics/Titanics.html">Titanics</button>
+                            <button data-link="Huge/Huges.html">Huges</button>
+                            <button data-link="Exclusives/Exclusives.html">Exclusives</button>
+                            <button data-link="Stat/Stat.html">Stat pets</button>
                 
             </div>
             <button class="joinme-button" data-link="https://www.roblox.com/users/377788908/profile">
