--- a/Stat.html
+++ b/Stat.html
@@ -12,9 +12,9 @@
             <div class="menu">
                 <button class="home-button" data-link="../">Home</button>
                 <button data-link="../Titanics/Titanics.html">Titanics</button>
-                <button data-link="../Huge/Huges.html">Huges</button>
+                <button data-link="index.html">Huges</button>
                 <button data-link="../Exclusives/Exclusives.html">Exclusives</button>
-                <button data-link="../Stat/Stat.html">Stat pets</button>
+                <button data-link="Stat.html">Stat pets</button>
             </div>
             <button class="joinme-button" data-link="https://www.roblox.com/users/1691333230/profile">
                 <img src="../Face.png" alt="Profile">Join Me
