--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
         <aside class="sidebar">
             <div class="menu">
                             <button class="home-button" data-link="../">Home</button>
-                            <button data-link="Titanics/Titanics.html">Titanics</button>
-                            <button data-link="Huge/Huges.html">Huges</button>
-                            <button data-link="Exclusives/Exclusives.html">Exclusives</button>
-                            <button data-link="Stat/Stat.html">Stat pets</button>
+                            <button data-link="../Titanics/Titanics.html">Titanics</button>
+                            <button data-link="../Huge/Huges.html">Huges</button>
+                            <button data-link="../Exclusives/Exclusives.html">Exclusives</button>
+                            <button data-link="../Stat/Stat.html">Stat pets</button>
                 
             </div>
             <button class="joinme-button" data-link="https://www.roblox.com/users/377788908/profile">
