--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <button class="home-button" data-link="../">Home</button>
                             <button data-link="../Titanics/Titanics.html">Titanics</button>
                             <button data-link="../Huge/Huges.html">Huges</button>
-                            <button data-link="../Exclusives/Exclusives.html">Exclusives</button>
+                            <button data-link="MyIndex/Exclusives/Exclusives.html">Exclusives</button>
                             <button data-link="../Stat/Stat.html">Stat pets</button>
                 
             </div>
