--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="menu">
-                            <button class="home-button" data-link="index.html">Home</button>
+                           <button class="home-button" data-link="../">Home</button>
                             <button data-link="Titanics/Titanics.html">Titanics</button>
                             <button data-link="Huge/Huges.html">Huges</button>
                             <button data-link="Exclusives/Exclusives.html">Exclusives</button>
