--- a/Huge/Huges.html
+++ b/Huge/Huges.html
@@ -175,7 +175,7 @@
             { name: 'Pastel Sock Dragon', img: 'noicon.png', variations: [3, 4] },
             { name: 'Orange Balloon Cat', img: 'noicon.png', variations: [3] },
             { name: 'Nightmare Kraken', img: 'noicon.png', variations: [3, 4] },
-            { name: 'Nightfall Wolf', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Nightfall Wolf', img: 'noicon.png', variations: [4] },
             { name: 'Nightfall Pegasus', img: 'noicon.png', variations: [3] },
             { name: 'Neon Cat', img: 'noicon.png', variations: [4] },
             { name: 'Mosaic Corgi', img: 'noicon.png', variations: [4] },
@@ -189,7 +189,7 @@
             { name: 'Kraken', img: 'noicon.png', variations: [3] },
             { name: 'Kitsune Fox', img: 'noicon.png', variations: [4] },
             { name: 'King Cobra', img: 'noicon.png', variations: [3, 4] },
-            { name: 'Evolved King Cobra', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Evolved King Cobra', img: 'noicon.png', variations: [4] },
             { name: 'Kawaii Cat', img: 'noicon.png', variations: [3, 4] },
             { name: 'Jelly Piggy', img: 'noicon.png', variations: [3] },
             { name: 'Jelly Corgi', img: 'noicon.png', variations: [3, 4] },
@@ -237,7 +237,6 @@
             { name: 'Cupid Corgi', img: 'noicon.png', variations: [4] },
             { name: 'Crystal Dog', img: 'noicon.png', variations: [3, 4] },
             { name: 'Crocodile', img: 'noicon.png', variations: [3] },
-            { name: 'Cosmic Agony', img: 'noicon.png', variations: [3] },
             { name: 'Corgi', img: 'noicon.png', variations: [3, 4] },
             { name: 'Cool Cat', img: 'noicon.png', variations: [3, 4] },
             { name: 'Cheerful Yeti', img: 'noicon.png', variations: [4] },
