--- a/Stat/Stat.html
+++ b/Stat/Stat.html
@@ -60,7 +60,7 @@
             { name: 'Kawaii Tiger', img: 'noicon.png', variations: [4] },
             {
                 name: 'Chroma Phoenix', img: 'noicon.png', variations: [4], colors: {
-                    4: ['white', 'green', 'purple', 'orange', 'yellow', 'blue'],   // Shiny
+                    4: ['blue'],   // Shiny
                 }
             },
                 ];
