--- a/Huge/Huges.html
+++ b/Huge/Huges.html
@@ -73,7 +73,7 @@
             { name: 'Tiedye Corgi', img: 'noicon.png', variations: [4] },
             { name: 'Tiedye Axolotl', img: 'noicon.png', variations: [4] },
             { name: 'Treasure Turtle', img: 'noicon.png', variations: [2, 3] },
-            { name: 'Sand Castle Cat', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Sand Castle Cat', img: 'noicon.png', variations: [4] },
             { name: 'Samurai Dragon', img: 'noicon.png', variations: [3] },
             { name: 'Sailor Shark', img: 'noicon.png', variations: [3, 4] },
             { name: 'Shark', img: 'noicon.png', variations: [3, 4] },
@@ -203,7 +203,7 @@
             { name: 'Heart Balloon', img: 'noicon.png', variations: [3, 4] },
             { name: 'Green Balloon Cat', img: 'noicon.png', variations: [4] },
             { name: 'Gamer Shiba', img: 'noicon.png', variations: [3, 4] },
-            { name: 'Fox', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Fox', img: 'noicon.png', variations: [3] },
             { name: 'Forest Wyvern', img: 'noicon.png', variations: [3] },
             { name: 'Floppa', img: 'noicon.png', variations: [4] },
             { name: 'Firefighter Dalmatian', img: 'noicon.png', variations: [3, 4] },
@@ -212,7 +212,7 @@
             { name: 'Festive Cat', img: 'noicon.png', variations: [3] },
             { name: 'Fairy', img: 'noicon.png', variations: [3, 4] },
             { name: 'Exquisite Parrot', img: 'noicon.png', variations: [3] },
-            { name: 'Evolved Cupcake', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Evolved Cupcake', img: 'noicon.png', variations: [4] },
             { name: 'Evolved Hell Rock', img: 'noicon.png', variations: [3, 4] },
             { name: 'Evolved Hacked Cat', img: 'noicon.png', variations: [3, 4] },
             { name: 'Enchanted Deer', img: 'noicon.png', variations: [3] },
@@ -253,7 +253,7 @@
             { name: 'Bear', img: 'noicon.png', variations: [4] },
             { name: 'Balloon', img: 'noicon.png', variations: [3, 4] },
             { name: 'Atlantean Orca', img: 'noicon.png', variations: [4] },
-            { name: 'Arcade Cat', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Arcade Cat', img: 'noicon.png', variations: [3] },
             { name: 'Arcade Dragon', img: 'noicon.png', variations: [3] },
             { name: 'Ancient Dragon', img: 'noicon.png', variations: [1, 2, 3, 4] },
             { name: 'Amethyst Dragon', img: 'noicon.png', variations: [3, 4] },
@@ -280,8 +280,8 @@
                             }
                         },
                         {
-                            name: 'Chroma Butterfly', img: 'noicon.png', variations: [1, 3], colors: {
-                                1: ['blue'],  // Normal
+                            name: 'Chroma Butterfly', img: 'noicon.png', variations: [3], colors: {
+
                                 3: ['purple', 'orange', 'red', 'yellow', 'green', 'blue'],   // Rainbow
                                 
                             }
@@ -309,7 +309,7 @@
                         },
                         {
                             name: 'Chroma Snail', img: 'noicon.png', variations: [1, 3], colors: {
-                                1: ['purple', 'red', 'yellow', 'green', 'blue'],  // Normal
+                                1: ['purple', 'green'],  // Normal
                                 3: ['purple', 'orange', 'red', 'yellow', 'green', 'blue'],   // Rainbow
                                
 
