--- a/Huge/Huges.html
+++ b/Huge/Huges.html
@@ -57,7 +57,7 @@
                         { name: 'Bubble Dog', img: 'noicon.png', variations: [1] },
                         { name: 'Crowned Corgi', img: 'noicon.png', variations: [1] },
                         { name: 'Crowned Pegasus', img: 'noicon.png', variations: [1] },
-                        { name: 'Hippo', img: 'noicon.png', variations: [3, 4] },
+                        { name: 'Hippo', img: 'noicon.png', variations: [4] },
                         { name: 'Mr Crabs', img: 'noicon.png', variations: [3] },
             { name: 'Old Wizard Owl', img: 'noicon.png', variations: [1, 2, 3, 4] },
             { name: 'Old Wizard Corgi', img: 'noicon.png', variations: [1, 2, 3, 4] },
@@ -219,7 +219,6 @@
             { name: 'Empyrean Agony', img: 'noicon.png', variations: [4] },
             { name: 'Emoji Cat', img: 'noicon.png', variations: [3] },
             { name: 'Elf Dog', img: 'noicon.png', variations: [3] },
-            { name: 'Elf Cat', img: 'noicon.png', variations: [3] },
             { name: 'Elegant Eagle', img: 'noicon.png', variations: [3] },
             { name: 'Electric Cat', img: 'noicon.png', variations: [3] },
             { name: 'Easter Yeti', img: 'noicon.png', variations: [3] },
@@ -228,7 +227,7 @@
             { name: 'Dragon', img: 'noicon.png', variations: [3, 4] },
             { name: 'Dove', img: 'noicon.png', variations: [3, 4] },
             { name: 'Doodle Cat', img: 'noicon.png', variations: [4] },
-            { name: 'Doodle Fairy', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Doodle Fairy', img: 'noicon.png', variations: [3] },
             { name: 'Dog', img: 'noicon.png', variations: [3, 4] },
             { name: 'Diamond Cat', img: 'noicon.png', variations: [3, 4] },
             { name: 'Devil Agony', img: 'noicon.png', variations: [4] },
