--- a/Huge/Huges.html
+++ b/Huge/Huges.html
@@ -83,7 +83,7 @@
             { name: 'Prickly Panda', img: 'noicon.png', variations: [3] },
             { name: 'Santa Monkey', img: 'noicon.png', variations: [3] },
             { name: 'Santa Dragon', img: 'noicon.png', variations: [4] },
-            { name: 'Present Chest Mimic', img: 'noicon.png', variations: [2, 3, 4] },
+            { name: 'Present Chest Mimic', img: 'noicon.png', variations: [2, 4] },
             { name: 'Chest Mimic', img: 'noicon.png', variations: [3, 4] },
             { name: 'Pinata Cat', img: 'noicon.png', variations: [3] },
             { name: 'Pixel Wolf', img: 'noicon.png', variations: [3] },
@@ -125,7 +125,6 @@
             { name: 'Inferno Dominus', img: 'noicon.png', variations: [4] },
             { name: 'Basketball Retriever', img: 'noicon.png', variations: [3, 4] },
             { name: 'Axolotl', img: 'noicon.png', variations: [2, 3, 4] },
-            { name: 'Sage Axolotl', img: 'noicon.png', variations: [3] },
 
             { name: 'Jelly Axolotl', img: 'noicon.png', variations: [3, 4] },
             { name: 'Hologram Axolotl', img: 'noicon.png', variations: [4] },
@@ -147,10 +146,9 @@
             { name: 'Valkyrie Wolf', img: 'noicon.png', variations: [4] },
             { name: 'Valentine Cat', img: 'noicon.png', variations: [3, 4] },
             { name: 'Unicorn', img: 'noicon.png', variations: [3, 4] },
-            { name: 'Unicorn Dragon', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Unicorn Dragon', img: 'noicon.png', variations: [4] },
             { name: 'Turtle', img: 'noicon.png', variations: [3] },
             { name: 'Techno Cat', img: 'noicon.png', variations: [4] },
-            { name: 'Super Tiger', img: 'noicon.png', variations: [3] },
             { name: 'Strawberry Corgi', img: 'noicon.png', variations: [3] },
             { name: 'Stargazing Wolf', img: 'noicon.png', variations: [3] },
             { name: 'Sombrero Chihuahua', img: 'noicon.png', variations: [4] },
@@ -171,9 +169,7 @@
             { name: 'Pink Marshmallow Chick', img: 'noicon.png', variations: [3] },
             { name: 'Peacock', img: 'noicon.png', variations: [3] },
             { name: 'Evolved Peacock', img: 'noicon.png', variations: [3, 4] },
-            { name: 'Pastel Elephant', img: 'noicon.png', variations: [3, 4] },
             { name: 'Pastel Sock Dragon', img: 'noicon.png', variations: [3, 4] },
-            { name: 'Orange Balloon Cat', img: 'noicon.png', variations: [3] },
             { name: 'Nightmare Kraken', img: 'noicon.png', variations: [3, 4] },
             { name: 'Nightfall Wolf', img: 'noicon.png', variations: [4] },
             { name: 'Nightfall Pegasus', img: 'noicon.png', variations: [3] },
@@ -181,7 +177,6 @@
             { name: 'Mosaic Corgi', img: 'noicon.png', variations: [4] },
             { name: 'Masked Owl', img: 'noicon.png', variations: [3, 4] },
             { name: 'Marshmallow Agony', img: 'noicon.png', variations: [4] },
-            { name: 'Mantis Shrimp', img: 'noicon.png', variations: [3] },
             { name: 'M-10 Prototype', img: 'noicon.png', variations: [3, 4] },
             { name: 'Lunar Moth', img: 'noicon.png', variations: [4] },
             { name: 'Love Lamb', img: 'noicon.png', variations: [3, 4] },
@@ -264,7 +259,7 @@
             { name: 'Strawberry Cow', img: 'noicon.png', variations: [4] },
             { name: 'Three Headed Dragon', img: 'noicon.png', variations: [1 ,2 ,3, 4] },
             { name: 'Luchador Coyote', img: 'noicon.png', variations: [1 ,3] },
-                        { name: 'Luchador Eagle', img: 'noicon.png', variations: [1 ,3, 4] },
+                        { name: 'Luchador Eagle', img: 'noicon.png', variations: [1 ,3] },
                         { name: 'Kawaii Tiger', img: 'noicon.png', variations: [1, 2 ,3, 4] },
                         { name: 'Cupcake Unicorn', img: 'noicon.png', variations: [1 ,3 , 4] },
                         { name: 'Helicopter Cat', img: 'noicon.png', variations: [2 ,3 , 4] },
