--- a/Huge/Huges.html
+++ b/Huge/Huges.html
@@ -81,7 +81,6 @@
             { name: 'Reindeer Axolotl', img: 'noicon.png', variations: [3, 4] },
             { name: 'Red Fluffy', img: 'noicon.png', variations: [3, 4] },
             { name: 'Prickly Panda', img: 'noicon.png', variations: [3] },
-            { name: 'Santa Monkey', img: 'noicon.png', variations: [3] },
             { name: 'Santa Dragon', img: 'noicon.png', variations: [4] },
             { name: 'Present Chest Mimic', img: 'noicon.png', variations: [2, 4] },
             { name: 'Chest Mimic', img: 'noicon.png', variations: [3, 4] },
@@ -166,7 +165,6 @@
             { name: 'Police Cat', img: 'noicon.png', variations: [4] },
             { name: 'Pixie Fox', img: 'noicon.png', variations: [3, 4] },
             { name: 'Pirate Parrot', img: 'noicon.png', variations: [3, 4] },
-            { name: 'Pink Marshmallow Chick', img: 'noicon.png', variations: [3] },
             { name: 'Peacock', img: 'noicon.png', variations: [3] },
             { name: 'Evolved Peacock', img: 'noicon.png', variations: [3, 4] },
             { name: 'Pastel Sock Dragon', img: 'noicon.png', variations: [3, 4] },
@@ -185,7 +183,7 @@
             { name: 'Kitsune Fox', img: 'noicon.png', variations: [4] },
             { name: 'King Cobra', img: 'noicon.png', variations: [3, 4] },
             { name: 'Evolved King Cobra', img: 'noicon.png', variations: [4] },
-            { name: 'Kawaii Cat', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Kawaii Cat', img: 'noicon.png', variations: [4] },
             { name: 'Jelly Piggy', img: 'noicon.png', variations: [3] },
             { name: 'Jelly Corgi', img: 'noicon.png', variations: [3, 4] },
             { name: 'Inferno Cat', img: 'noicon.png', variations: [3] },
@@ -223,7 +221,7 @@
             { name: 'Dove', img: 'noicon.png', variations: [3, 4] },
             { name: 'Doodle Cat', img: 'noicon.png', variations: [4] },
             { name: 'Doodle Fairy', img: 'noicon.png', variations: [3] },
-            { name: 'Dog', img: 'noicon.png', variations: [3, 4] },
+            { name: 'Dog', img: 'noicon.png', variations: [4] },
             { name: 'Diamond Cat', img: 'noicon.png', variations: [3, 4] },
             { name: 'Devil Agony', img: 'noicon.png', variations: [4] },
             { name: 'Cyborg Cat', img: 'noicon.png', variations: [3] },
@@ -260,7 +258,7 @@
             { name: 'Three Headed Dragon', img: 'noicon.png', variations: [1 ,2 ,3, 4] },
             { name: 'Luchador Coyote', img: 'noicon.png', variations: [1 ,3] },
                         { name: 'Luchador Eagle', img: 'noicon.png', variations: [1 ,3] },
-                        { name: 'Kawaii Tiger', img: 'noicon.png', variations: [1, 2 ,3, 4] },
+                        { name: 'Kawaii Tiger', img: 'noicon.png', variations: [1, 3] },
                         { name: 'Cupcake Unicorn', img: 'noicon.png', variations: [1 ,3 , 4] },
                         { name: 'Helicopter Cat', img: 'noicon.png', variations: [2 ,3 , 4] },
                         { name: 'Ice Cream Cone', img: 'noicon.png', variations: [1, 2 ,3] },
@@ -288,14 +286,14 @@
                         },
                         {
                             name: 'Chroma Swan', img: 'noicon.png', variations: [1, 3], colors: {
-                                1: ['white', 'purple', 'orange', 'red', 'yellow', 'blue'],  // Normal
+                                1: ['white', 'purple', 'red', 'yellow', 'blue'],  // Normal
                                 3: ['white','orange','yellow', 'green', 'blue'],   // Rainbow
 
                             }
                         },
                         {
                             name: 'Chroma Ink Blob', img: 'noicon.png', variations: [1, 3, 4], colors: {
-                                1: ['purple', 'orange', 'yellow', 'green', 'blue'],  // Normal
+                                1: ['yellow', 'green', 'blue'],  // Normal
                                 3: ['purple', 'orange', 'red', 'yellow', 'green'],   // Rainbow
                                 4: ['orange', 'red', 'yellow', 'green', 'blue'],   // Shiny
 
@@ -303,7 +301,7 @@
                         },
                         {
                             name: 'Chroma Snail', img: 'noicon.png', variations: [1, 3], colors: {
-                                1: ['purple', 'green'],  // Normal
+                                1: ['green'],  // Normal
                                 3: ['purple', 'orange', 'red', 'yellow', 'green', 'blue'],   // Rainbow
                                
 
@@ -311,7 +309,7 @@
                         },
                         { name: 'Chroma Phoenix', img: 'noicon.png', variations: [3, 4] },
                         { name: 'Sad Hamster', img: 'noicon.png', variations: [1 , 3, 4] },
-                        { name: 'Sad Dodge', img: 'noicon.png', variations: [1 , 3, 4] },
+                        { name: 'Sad Dodge', img: 'noicon.png', variations: [3, 4] },
                         { name: 'Graffiti Raccoon', img: 'noicon.png', variations: [1 , 2, 3] },
                                                                                     
          ];
