--- a/Huge/Huges.html
+++ b/Huge/Huges.html
@@ -268,7 +268,7 @@
             {
                             name: 'Chroma Tiger', img: 'noicon.png', variations: [3, 4], colors: {                       
                                 3: ['purple', 'orange', 'red', 'yellow', 'green', 'blue'],   // Rainbow
-                                4: ['purple', 'orange', 'red', 'yellow', 'green', 'blue']   // Shiny
+                                4: ['purple', 'orange', 'red', 'yellow', 'green']   // Shiny
                             }
                         },
                         {
@@ -279,8 +279,9 @@
                             }
                         },
                         {
-                            name: 'Chroma Unicorn', img: 'noicon.png', variations: [3], colors: {
-                                3: ['purple', 'orange', 'red', 'yellow', 'green'],   // Rainbow
+                            name: 'Chroma Unicorn', img: 'noicon.png', variations: [3, 4], colors: {
+                                3: ['blue', 'purple', 'orange', 'red'],   // Rainbow
+                        4: ['purple', 'orange', 'red'],   // Shiny
 
                             }
                         },
@@ -302,12 +303,20 @@
                         {
                             name: 'Chroma Snail', img: 'noicon.png', variations: [1, 3], colors: {
                                 1: ['green'],  // Normal
-                                3: ['purple', 'orange', 'red', 'yellow', 'green', 'blue'],   // Rainbow
+                                3: ['purple', 'orange', 'red', 'green', 'blue'],   // Rainbow
                                
 
                             }
                         },
-                        { name: 'Chroma Phoenix', img: 'noicon.png', variations: [3, 4] },
+                                {
+                            name: 'Chroma Phoenix', img: 'noicon.png', variations: [1, 3, 4], colors: {
+                                1: ['purple', 'orange', 'red', 'yellow', 'green', 'blue'],  // Normal
+                                3: ['purple', 'orange', 'red', 'yellow', 'blue'],   // Rainbow
+                        4: ['white', 'purple', 'orange', 'red', 'yellow', 'green', 'blue'],   // Rainbow
+                               
+
+                            }
+                        },
                         { name: 'Sad Hamster', img: 'noicon.png', variations: [1 , 3, 4] },
                         { name: 'Sad Dodge', img: 'noicon.png', variations: [3, 4] },
                         { name: 'Graffiti Raccoon', img: 'noicon.png', variations: [1 , 2, 3] },
